--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id=" " class="choices"></div>
       </div>
 
       <div id="end-screen" class="hide">
